crates/strider/tests/snapshots/ppc32le__patterns__main.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x100100ec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "8" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "9" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "8" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "10" [label="const 0x10010124:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" -> "8" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v12" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "8" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nr5", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "8" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nr6", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "8" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "15" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "8" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x10010160:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "15" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v19" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v19" [color="#888888", style=dashed];
  "v19" -> "15" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nr5", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v20" [color="#888888", style=dashed];
  "v20" -> "15" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nr6", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "8" -> "v21" [color="#888888", style=dashed];
  "v21" -> "15" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "22" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "15" -> "22" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "23" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x100101a8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" -> "22" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "26" -> "22" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v27" [label="Post Call\nr5", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v27" [color="#888888", style=dashed];
  "v27" -> "22" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v28" [label="Post Call\nr6", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v28" [color="#888888", style=dashed];
  "v28" -> "22" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "29" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "22" -> "29" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "30" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x10010220:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" -> "29" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "33" -> "29" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "34" -> "29" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v35" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "22" -> "v35" [color="#888888", style=dashed];
  "v35" -> "29" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "36" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "29" -> "36" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "v39" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v39" [color="#888888", style=dashed];
  "v39" -> "36" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v40" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v40" [color="#888888", style=dashed];
  "v40" -> "36" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v41" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "29" -> "v41" [color="#888888", style=dashed];
  "v41" -> "36" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "38" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "42" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v39" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "29" -> "42" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "42" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0xfffffff8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "37" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "29" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v46" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v46" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "47" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v35" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "22" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "47" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "33" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "22" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" -> "33" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "48" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "22" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "32" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "50" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0xfffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "22" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v52" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v52" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "44" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "54" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v55" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v55" -> "23" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "56" -> "23" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x5:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "54" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "57" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v58" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v58" -> "54" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "59" -> "54" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "57" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "15" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "57" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "61" -> "57" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "61" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "62" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v63" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "15" -> "v63" [color="#888888", style=dashed];
  "v63" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "15" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "62" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "16" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "8" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v64" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v64" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "65" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "65" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "66" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v19" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "66" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "66" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "9" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "1" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v67" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v67" -> "9" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "68" -> "9" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "68" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "69" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v12" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" -> "69" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "7" [label="arg[3] ← r6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "70" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v71" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v71" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "72" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "72" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "70" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "73" -> "70" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v74" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v74" -> "70" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "75" -> "70" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "75" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "73" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "76" -> "73" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v77" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v77" -> "73" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "78" -> "73" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "78" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "76" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "79" -> "76" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v80" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v80" -> "76" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "44" -> "76" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "79" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "81" -> "79" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v82" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v82" -> "79" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "83" -> "79" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "83" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "81" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
